src/App.css
/* 
Main Colors:
#fde74cff
#bf211eff
*/

.App {
  background-color: #bf211eff;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 15vh;
  color: white;
  font-family: "Tomorrow", sans-serif;
  text-align: center;
}

h2 {
  font-size: 1.2rem;
}

/* Navbar Styles */
nav {
  width: 100%;
  position: absolute;
  top: 0;
  background-color: rgba(0, 0, 0, 0.4);
}

.navbar {
  list-style-type: none;
  text-transform: capitalize;
  display: flex;
  justify-content: space-around;
  padding: 1rem;
  margin: auto;
}

.navbar li {
  cursor: pointer;
}

/* Importing Tomorrow Font from Google Fonts */
@font-face {
  font-family: "Tomorrow";
  font-style: normal;
  font-weight: 500;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/tomorrow/v15/WBLhrETNbFtZCeGqgR0hWHXBDMWRiQ.woff2)
    format("woff2");
  unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF,
    U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}
@font-face {
  font-family: "Tomorrow";
  font-style: normal;
  font-weight: 500;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/tomorrow/v15/WBLhrETNbFtZCeGqgR0hWHXPDMU.woff2)
    format("woff2");
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
    U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
    U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

button.primary {
  padding: 1em;
  margin-top: 1rem;
  font-size: 1rem;
  border: none;
  background-color: #fde74cff;
  font-family: "Tomorrow", sans-serif;
}

/* UNDERSCORE ANIMATION */
.underscore {
  color: #f7f7f7;
  white-space: pre-wrap;
  word-wrap: break-word;
}
.underscore:after {
  content: "_";
  font-weight: bold;
  animation: blinking 1s step-end infinite;
}
@keyframes blinking {
  from,
  to {
    visibility: hidden;
  }
  50% {
    visibility: visible;
  }
}

